syntax = "proto3";

option csharp_namespace = "Financial.gRPC";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto"; 
import "google/api/annotations.proto";

package expences;

service Expences{

	rpc CreateExpense (CreateExpenseRequest) returns (CreateExpenseResponse){
		option (google.api.http) = {
			post: "/api/financial/expence/create",
			body:"*"
		};
	}
	rpc CreateExpenceItems (CreateExpenceItemsRequest) returns (CreateExpenceItemsResponse){
		option (google.api.http) = {
			post: "/api/financial/expence/createItems",
			body:"*"
		};
	}

	rpc GetNotPaidExpenceItems(GetNotPaidExpenceItemsRequest) returns (GetNotPaidExpenceItemsResponse){
	    option (google.api.http) = {
			get: "/api/financial/expence/getnotpaidexpenceitems/{id}"
		};
	}

	rpc GetExpenceReport(ExpenceReportRequest) returns (ExpenceReportResponse){
		option (google.api.http) = {
			get: "/api/financial/expence/getExpenceReport/{id}"
		};
	}

}





message CreateExpenseRequest{
string site_id =1;
string title = 2;
string description = 3;
double total_amount = 4;
}

message CreateExpenseResponse{
bool is_success = 1;
string message = 2;
}


message CreateExpenceItemsRequest{
string expence_id = 1;
repeated  string unit_ids = 2;
string last_payment_date = 3;
}

message CreateExpenceItemsResponse{
bool is_success = 1;
string message = 2;
}


message GetNotPaidExpenceItemsRequest{
	string id = 1;
}

message GetNotPaidExpenceItemsResponse{
	repeated ItemsResponse items = 1;
}

message ItemsResponse{
	string unit_id = 1;
	double amount = 2;
	string last_payment_date = 3;
}


message ExpenceReportRequest{
	string id = 1;
}

message ExpenceReportResponse{
	string title=1;
	string description=2;
	double amount=3;
	string created_date=4;
}